[package]
name = "clipfst"
version = "0.0.2"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2024"
description = "Clip from FST waveform."
repository = "https://github.com/MaxXSoft/fst-tools"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
fstapi = { path = "../fstapi" }
regex = "1.12.2"
