[package]
name = "findfst"
version = "0.0.3"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2024"
description = "Find the values of signals from FST waveform."
repository = "https://github.com/MaxXSoft/fst-tools"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
fstapi = { path = "../fstapi" }
regex = "1.12.2"
