[package]
name = "fstapi"
version = "0.0.3"
authors = ["MaxXing <x@MaxXSoft.net>"]
edition = "2024"
description = "API for manipulating Fast Signal Trace (FST) format waveforms."
repository = "https://github.com/MaxXSoft/fst-tools"
documentation = "https://docs.rs/fstapi"
categories = ["api-bindings"]
keywords = ["fst", "vcd", "waveforms", "signal"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[build-dependencies]
bindgen = "0.72.1"
cc = { version = "1.2.41", features = ["parallel"] }

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"
